added a sort button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <div class="container">
         <div class="tasks">
+            <button id="sort">Sort</button>
             <input type="text" id="input">
             <button id="submit">Enter</button>
         </div>
